# Master-Thesis

./: .clang-format  .cmake-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile-ubuntu-opencv  README.md  requirements.txt  setup.py
.github/workflows/: build_docker.yml  build_native.yml  cmake.yml  publish_image.yml
ci/: activate_venv.sh  config_compiler.sh  install_cmake.sh  install_opencv.sh  run_main_app.sh  run_tests.sh
docs/: LongDescription.md  ShortDescription.md  UsefulLinks.md
include/: config.hpp  dwt.hpp  entropy.hpp  filesystem.hpp  filter_luts.hpp  luts.hpp  matrix.hpp  parallel_for.hpp  template_helpers.hpp
playground/: dwt_example.py  entropy_1.m  entropy_2.m  entropy_3.m  memoryless_entropy.m  test_jpeg.py  test_jpeg_rgb.py
scripts/: gather_ref_results.py  gather_results.py  gather_time_exec_results.py  generate_kdu_input.py  test_kdu.py  test_kdu_dwt_comp.py  test_kdu_filter.py  test_time_execution.py
src/: CMakeLists.txt  arg_parser.cpp  arg_parser.hpp  check_entropy.cpp  check_entropy.hpp  demo_dwt.cpp  demo_dwt.hpp  demo_opencv.cpp  demo_opencv.hpp  demo_queue.cpp  demo_queue.hpp  dwt.cpp  main.cpp  matrix.hpp  opencv.hpp  opencv_examples.cpp  queue.cpp  queue.hpp
src/dwt/: CMakeLists.txt  dwt.cpp  dwt.hpp  dwt_2d.cpp  dwt_2d.hpp  dwt_helpers.hpp
test/: CMakeLists.txt  __init__.py  dwt.cpp  dwt_2d.cpp  dwt_2d_d.cpp  dwt_2d_f.cpp  dwt_2d_helpers.hpp  main.cpp  setup.py  test.py  utils.cpp  utils.hpp
test/ut/: CMakeLists.txt
test/ut/dwt/: CMakeLists.txt  dwt_helpers.cpp
test/ut/include-test/: CMakeLists.txt  parallel_for.cpp
thesis/: references.bib  thesis.tex  titlepage.tex
thesis/chapters/: appendices.tex  assumptions.tex  experiments.tex  idea.tex  implementation.tex  introduction.tex  problem.tex  results.tex  subject.tex  summary.tex
thesis/graphics/: 384007.ppm  im_0069.ppm
